package build concourse pipeline (#49)
* package build concourse pipeline

* fix wrong repo-name

* fix wrong repo-name

* add validate version step for each build

* address comments

* address comments

* remove load_var in task, use shell

* update: add -e, extract date command, remove .: syntax

* fix generate-date

* fix

* remove integ test osconfig

* fix

--- a/concourse/tasks/generate-timestamp.yaml
+++ b/concourse/tasks/generate-timestamp.yaml
@@ -7,10 +7,10 @@ image_resource:
     repository: busybox
 
 outputs:
-- name: publish-version
+- name: timestamp
 
 run:
   path: sh
   args:
   - -exc
-  - "date '+%Y%m%d' | tee publish-version/version"
+  - "timestamp=$(date '+%s'); echo $timestamp | tee timestamp/timestamp"
