--- a/concourse/pipelines/develope-image-build.yaml
+++ b/concourse/pipelines/develope-image-build.yaml
@@ -23,48 +23,48 @@ resources:
     json_key: |
       ((gcs-key.credential))
     regexp: "debian-worker/debian-10-worker-v([0-9]+).tar.gz"
-- name: centos-7-devcluster-gcs
+- name: centos-7-dev-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
-    regexp: "devcluster/centos-7-dev-v([0-9]+).tar.gz"
-- name: centos-8-devcluster-gcs
+    regexp: "dev/centos-7-dev-v([0-9]+).tar.gz"
+- name: centos-8-dev-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
-    regexp: "devcluster/centos-8-dev-v([0-9]+).tar.gz"
-- name: debian-9-devcluster-gcs
+    regexp: "dev/centos-8-dev-v([0-9]+).tar.gz"
+- name: debian-9-dev-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
-    regexp: "devcluster/debian-9-dev-v([0-9]+).tar.gz"
-- name: debian-10-devcluster-gcs
+    regexp: "dev/debian-9-dev-v([0-9]+).tar.gz"
+- name: debian-10-dev-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
-    regexp: "devcluster/debian-10-dev-v([0-9]+).tar.gz"
-- name: ubuntu-1604-devcluster-gcs
+    regexp: "dev/debian-10-dev-v([0-9]+).tar.gz"
+- name: ubuntu-1604-dev-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
-    regexp: "devcluster/ubuntu-1604-dev-v([0-9]+).tar.gz"
-- name: ubuntu-1804-devcluster-gcs
+    regexp: "dev/ubuntu-1604-dev-v([0-9]+).tar.gz"
+- name: ubuntu-1804-dev-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
-    regexp: "devcluster/ubuntu-1804-dev-v([0-9]+).tar.gz"
+    regexp: "dev/ubuntu-1804-dev-v([0-9]+).tar.gz"
 
 jobs:
 # Build jobs
@@ -96,7 +96,7 @@ jobs:
       gcs_url: ((.:gcs-url))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
-- name: build-centos-7-devcluster
+- name: build-centos-7-dev
   plan:
   - get: compute-image-tools
   - get: guest-test-infra
@@ -104,26 +104,26 @@ jobs:
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
       prefix: "centos-7-dev"
-  - put: centos-7-devcluster-gcs
+  - put: centos-7-dev-gcs
     params:
       file: build-id-dir/centos-7-dev*
     get_params:
       skip_download: "true"
   - load_var: gcs-url
-    file: centos-7-devcluster-gcs/url
+    file: centos-7-dev-gcs/url
   - task: generate-build-date
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: build-date
     file: publish-version/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
-  - task: daisy-build-centos-7-devcluster
+  - task: daisy-build-centos-7-dev
     file: guest-test-infra/concourse/tasks/daisy-build-images-dev.yaml
     vars:
-      wf: "linux_devcluster/centos_7_devcluster.wf.json"
+      wf: "linux_dev/centos_7_dev.wf.json"
       gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
-- name: build-centos-8-devcluster
+- name: build-centos-8-dev
   plan:
   - get: compute-image-tools
   - get: guest-test-infra
@@ -131,26 +131,26 @@ jobs:
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
       prefix: "centos-8-dev"
-  - put: centos-8-devcluster-gcs
+  - put: centos-8-dev-gcs
     params:
       file: build-id-dir/centos-8-dev*
     get_params:
       skip_download: "true"
   - load_var: gcs-url
-    file: centos-8-devcluster-gcs/url
+    file: centos-8-dev-gcs/url
   - task: generate-build-date
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: build-date
     file: publish-version/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
-  - task: daisy-build-centos-8-devcluster
+  - task: daisy-build-centos-8-dev
     file: guest-test-infra/concourse/tasks/daisy-build-images-dev.yaml
     vars:
-      wf: "linux_devcluster/centos_8_devcluster.wf.json"
+      wf: "linux_dev/centos_8_dev.wf.json"
       gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
-- name: build-debian-9-devcluster
+- name: build-debian-9-dev
   plan:
   - get: compute-image-tools
   - get: guest-test-infra
@@ -158,26 +158,26 @@ jobs:
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
       prefix: "debian-9-dev"
-  - put: debian-9-devcluster-gcs
+  - put: debian-9-dev-gcs
     params:
       file: build-id-dir/debian-9-dev*
     get_params:
       skip_download: "true"
   - load_var: gcs-url
-    file: debian-9-devcluster-gcs/url
+    file: debian-9-dev-gcs/url
   - task: generate-build-date
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: build-date
     file: publish-version/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
-  - task: daisy-build-debian-9-devcluster
+  - task: daisy-build-debian-9-dev
     file: guest-test-infra/concourse/tasks/daisy-build-images-dev.yaml
     vars:
-      wf: "linux_devcluster/debian_9_devcluster.wf.json"
+      wf: "linux_dev/debian_9_dev.wf.json"
       gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
-- name: build-debian-10-devcluster
+- name: build-debian-10-dev
   plan:
   - get: compute-image-tools
   - get: guest-test-infra
@@ -185,26 +185,26 @@ jobs:
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
       prefix: "debian-10-dev"
-  - put: debian-10-devcluster-gcs
+  - put: debian-10-dev-gcs
     params:
       file: build-id-dir/debian-10-dev*
     get_params:
       skip_download: "true"
   - load_var: gcs-url
-    file: debian-10-devcluster-gcs/url
+    file: debian-10-dev-gcs/url
   - task: generate-build-date
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: build-date
     file: publish-version/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
-  - task: daisy-build-debian-10-devcluster
+  - task: daisy-build-debian-10-dev
     file: guest-test-infra/concourse/tasks/daisy-build-images-dev.yaml
     vars:
-      wf: "linux_devcluster/debian_10_devcluster.wf.json"
+      wf: "linux_dev/debian_10_dev.wf.json"
       gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
-- name: build-ubuntu-1604-devcluster
+- name: build-ubuntu-1604-dev
   plan:
   - get: compute-image-tools
   - get: guest-test-infra
@@ -212,26 +212,26 @@ jobs:
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
       prefix: "ubuntu-1604-dev"
-  - put: ubuntu-1604-devcluster-gcs
+  - put: ubuntu-1604-dev-gcs
     params:
       file: build-id-dir/ubuntu-1604-dev*
     get_params:
       skip_download: "true"
   - load_var: gcs-url
-    file: ubuntu-1604-devcluster-gcs/url
+    file: ubuntu-1604-dev-gcs/url
   - task: generate-build-date
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: build-date
     file: publish-version/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
-  - task: daisy-build-ubuntu-1604-devcluster
+  - task: daisy-build-ubuntu-1604-dev
     file: guest-test-infra/concourse/tasks/daisy-build-images-dev.yaml
     vars:
-      wf: "linux_devcluster/ubuntu_1604_devcluster.wf.json"
+      wf: "linux_dev/ubuntu_1604_dev.wf.json"
       gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
-- name: build-ubuntu-1804-devcluster
+- name: build-ubuntu-1804-dev
   plan:
   - get: compute-image-tools
   - get: guest-test-infra
@@ -239,23 +239,23 @@ jobs:
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
       prefix: "ubuntu-1804-dev"
-  - put: ubuntu-1804-devcluster-gcs
+  - put: ubuntu-1804-dev-gcs
     params:
       file: build-id-dir/ubuntu-1804-dev*
     get_params:
       skip_download: "true"
   - load_var: gcs-url
-    file: ubuntu-1804-devcluster-gcs/url
+    file: ubuntu-1804-dev-gcs/url
   - task: generate-build-date
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: build-date
     file: publish-version/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
-  - task: daisy-build-ubuntu-1804-devcluster
+  - task: daisy-build-ubuntu-1804-dev
     file: guest-test-infra/concourse/tasks/daisy-build-images-dev.yaml
     vars:
-      wf: "linux_devcluster/ubuntu_1804_devcluster.wf.json"
+      wf: "linux_dev/ubuntu_1804_dev.wf.json"
       gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
 
@@ -264,31 +264,31 @@ jobs:
   plan:
   - get: guest-test-infra
   - get: compute-image-tools
-  - get: debian-9-devcluster-gcs
-    passed: [build-debian-9-devcluster]
+  - get: debian-9-dev-gcs
+    passed: [build-debian-9-dev]
     trigger: false
     params:
       skip_download: "true"
-  - get: debian-10-devcluster-gcs
-    passed: [build-debian-10-devcluster]
+  - get: debian-10-dev-gcs
+    passed: [build-debian-10-dev]
     trigger: false
     params:
       skip_download: "true"
   - load_var: source-version
-    file: debian-9-devcluster-gcs/version
+    file: debian-9-dev-gcs/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
   - task: generate-version
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: publish-version
     file: publish-version/version # produced from generate-version task
-  - task: publish-debian-9-devcluster
+  - task: publish-debian-9-dev
     file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
     vars:
-      source_gcs_path: "gs://gce-image-archive/devcluster"
+      source_gcs_path: "gs://gce-image-archive/dev"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "linux_devcluster/debian_staging.publish.json"
+      wf: "linux_dev/debian_staging.publish.json"
       environment: "test"
 
 - name: publish-to-testing-debian-10-worker
