Add CentOS Stream build, remove RHEL 6. (#51)
* Add CentOS Stream build, remove RHEL 6.

* fix

* fix

* fix

* fix

--- a/concourse/pipelines/linux-image-build.yaml
+++ b/concourse/pipelines/linux-image-build.yaml
@@ -31,14 +31,14 @@ resources:
     json_key: |
       ((gcs-key.credential))
     regexp: "centos/centos-8-v([0-9]+).tar.gz"
-# rhel
-- name: rhel-6-gcs
+- name: centos-stream-8-gcs
   type: gcs
   source:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
-    regexp: "rhel/rhel-6-v([0-9]+).tar.gz"
+    regexp: "centos/centos-stream-8-v([0-9]+).tar.gz"
+# rhel
 - name: rhel-7-gcs
   type: gcs
   source:
@@ -131,7 +131,7 @@ jobs:
   - task: daisy-build-centos-7
     file: guest-test-infra/concourse/tasks/daisy-build-images.yaml
     vars:
-      wf: "enterprise_linux/centos_7_uefi.wf.json"
+      wf: "enterprise_linux/centos_7.wf.json"
       gcs_url: ((.:gcs-url))
       iso: ((iso-paths.centos-7))
       google_cloud_repo: "stable"
@@ -160,41 +160,41 @@ jobs:
   - task: daisy-build-centos-8
     file: guest-test-infra/concourse/tasks/daisy-build-images.yaml
     vars:
-      wf: "enterprise_linux/centos_8_uefi.wf.json"
+      wf: "enterprise_linux/centos_8.wf.json"
       gcs_url: ((.:gcs-url))
       iso: ((iso-paths.centos-8))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
-# rhel
-- name: build-rhel-6
+- name: build-centos-stream-8
   plan:
   - get: compute-image-tools
   - get: guest-test-infra
   - task: generate-build-id
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
-      prefix: "rhel-6"
-  - put: rhel-6-gcs
+      prefix: "centos-stream-8"
+  - put: centos-stream-8-gcs
     params:
-      file: build-id-dir/rhel-6*
+      file: build-id-dir/centos-stream-8*
     get_params:
       skip_download: "true"
   - load_var: gcs-url
-    file: rhel-6-gcs/url
+    file: centos-stream-8-gcs/url
   - task: generate-build-date
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: build-date
     file: publish-version/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
-  - task: daisy-build-rhel-6
+  - task: daisy-build-centos-stream-8
     file: guest-test-infra/concourse/tasks/daisy-build-images.yaml
     vars:
-      wf: "enterprise_linux/rhel_6.wf.json"
+      wf: "enterprise_linux/centos_stream_8.wf.json"
       gcs_url: ((.:gcs-url))
-      iso: ((iso-paths.rhel-6))
+      iso: ((iso-paths.centos-stream-8))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
+# rhel
 - name: build-rhel-7
   plan:
   - get: compute-image-tools
@@ -219,7 +219,7 @@ jobs:
   - task: daisy-build-rhel-7
     file: guest-test-infra/concourse/tasks/daisy-build-images.yaml
     vars:
-      wf: "enterprise_linux/rhel_7_uefi.wf.json"
+      wf: "enterprise_linux/rhel_7.wf.json"
       gcs_url: ((.:gcs-url))
       iso: ((iso-paths.rhel-7))
       google_cloud_repo: "stable"
@@ -248,7 +248,7 @@ jobs:
   - task: daisy-build-rhel-8
     file: guest-test-infra/concourse/tasks/daisy-build-images.yaml
     vars:
-      wf: "enterprise_linux/rhel_8_uefi.wf.json"
+      wf: "enterprise_linux/rhel_8.wf.json"
       gcs_url: ((.:gcs-url))
       iso: ((iso-paths.rhel-8))
       google_cloud_repo: "stable"
@@ -395,7 +395,7 @@ jobs:
     vars:
       wf: "enterprise_linux/rhel_8_2_sap.wf.json"
       gcs_url: ((.:gcs-url))
-      iso: ((iso-paths.rhel-8-1))
+      iso: ((iso-paths.rhel-8-2))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 # debian
@@ -481,7 +481,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_7_uefi.publish.json"
+      wf: "enterprise_linux/centos_7.publish.json"
       environment: "test"
 - name: publish-to-testing-centos-8
   plan:
@@ -506,34 +506,34 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_8_uefi.publish.json"
+      wf: "enterprise_linux/centos_8.publish.json"
       environment: "test"
-# rhel
-- name: publish-to-testing-rhel-6
+- name: publish-to-testing-centos-stream-8
   plan:
   - get: guest-test-infra
   - get: compute-image-tools
-  - get: rhel-6-gcs
-    passed: [build-rhel-6]
+  - get: centos-stream-8-gcs
+    passed: [build-centos-stream-8]
     trigger: false
     params:
       skip_download: "true"
   - load_var: source-version
-    file: rhel-6-gcs/version
+    file: centos-stream-8-gcs/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
   - task: generate-version
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: publish-version
-    file: publish-version/version # produced from generate-version task
-  - task: publish-rhel-6
+    file: publish-version/version  # produced from generate-version task
+  - task: publish-centos-stream-8
     file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
     vars:
-      source_gcs_path: "gs://gce-image-archive/rhel"
+      source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_6.publish.json"
+      wf: "enterprise_linux/centos_stream_8.publish.json"
       environment: "test"
+# rhel
 - name: publish-to-testing-rhel-7
   plan:
   - get: guest-test-infra
@@ -557,7 +557,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/rhel"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_7_uefi.publish.json"
+      wf: "enterprise_linux/rhel_7.publish.json"
       environment: "test"
 - name: publish-to-testing-rhel-8
   plan:
@@ -582,7 +582,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/rhel"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_8_uefi.publish.json"
+      wf: "enterprise_linux/rhel_8.publish.json"
       environment: "test"
 - name: publish-to-testing-rhel-7-4-sap
   plan:
@@ -785,7 +785,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_7_uefi.publish.json"
+      wf: "enterprise_linux/centos_7.publish.json"
       environment: "staging"
 - name: publish-to-staging-centos-8
   plan:
@@ -810,34 +810,34 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_8_uefi.publish.json"
-      environment: "staing"
-# rhel
-- name: publish-to-staging-rhel-6
+      wf: "enterprise_linux/centos_8.publish.json"
+      environment: "staging"
+- name: publish-to-staging-centos-stream-8
   plan:
   - get: guest-test-infra
   - get: compute-image-tools
-  - get: rhel-6-gcs
-    passed: [publish-to-testing-rhel-6]
+  - get: centos-stream-8-gcs
+    passed: [publish-to-testing-centos-stream-8]
     trigger: false
     params:
       skip_download: "true"
   - load_var: source-version
-    file: rhel-6-gcs/version
+    file: centos-stream-8-gcs/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
   - task: generate-version
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: publish-version
-    file: publish-version/version # produced from generate-version task
-  - task: publish-rhel-6
+    file: publish-version/version  # produced from generate-version task
+  - task: publish-centos-stream-8
     file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
     vars:
-      source_gcs_path: "gs://gce-image-archive/rhel"
+      source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_6.publish.json"
+      wf: "enterprise_linux/centos_stream_8.publish.json"
       environment: "staging"
+# rhel
 - name: publish-to-staging-rhel-7
   plan:
   - get: guest-test-infra
@@ -861,7 +861,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/rhel"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_7_uefi.publish.json"
+      wf: "enterprise_linux/rhel_7.publish.json"
       environment: "staging"
 - name: publish-to-staging-rhel-8
   plan:
@@ -886,7 +886,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/rhel"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_8_uefi.publish.json"
+      wf: "enterprise_linux/rhel_8.publish.json"
       environment: "staging"
 - name: publish-to-staging-rhel-7-4-sap
   plan:
@@ -1089,7 +1089,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_7_uefi.publish.json"
+      wf: "enterprise_linux/centos_7.publish.json"
       environment: "prod"
 - name: publish-to-prod-centos-8
   plan:
@@ -1113,34 +1113,33 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_8_uefi.publish.json"
+      wf: "enterprise_linux/centos_8.publish.json"
       environment: "prod"
-# rhel
-- name: publish-to-prod-rhel-6
+- name: publish-to-prod-centos-stream-8
   plan:
   - get: guest-test-infra
   - get: compute-image-tools
-  - get: rhel-6-gcs
-    passed: [publish-to-staging-rhel-6]
+  - get: centos-stream-8-gcs
+    passed: [publish-to-staging-centos-stream-8]
     trigger: false
-    params:
-      skip_download: "true"
+    params: {skip_download: "true"}
   - load_var: source-version
-    file: rhel-6-gcs/version
+    file: centos-stream-8-gcs/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
   - task: generate-version
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: publish-version
-    file: publish-version/version # produced from generate-version task
-  - task: publish-rhel-6
+    file: publish-version/version  # produced from generate-version task
+  - task: publish-centos-stream-8
     file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
     vars:
-      source_gcs_path: "gs://gce-image-archive/rhel"
+      source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_6.publish.json"
+      wf: "enterprise_linux/centos_stream_8.publish.json"
       environment: "prod"
+# rhel
 - name: publish-to-prod-rhel-7
   plan:
   - get: guest-test-infra
@@ -1164,7 +1163,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/rhel"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_7_uefi.publish.json"
+      wf: "enterprise_linux/rhel_7.publish.json"
       environment: "prod"
 - name: publish-to-prod-rhel-8
   plan:
@@ -1189,7 +1188,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/rhel"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_8_uefi.publish.json"
+      wf: "enterprise_linux/rhel_8.publish.json"
       environment: "prod"
 - name: publish-to-prod-rhel-7-4-sap
   plan:
