--- a/concourse/pipelines/linux-image-build.yaml
+++ b/concourse/pipelines/linux-image-build.yaml
@@ -133,7 +133,7 @@ jobs:
     vars:
       wf: "enterprise_linux/centos_7.wf.json"
       gcs_url: ((.:gcs-url))
-      iso: ((linux-image-build.iso-paths.centos-7))
+      iso: ((iso-paths.centos-7))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 - name: build-centos-8
@@ -162,7 +162,7 @@ jobs:
     vars:
       wf: "enterprise_linux/centos_8.wf.json"
       gcs_url: ((.:gcs-url))
-      iso: ((linux-image-build.iso-paths.centos-8))
+      iso: ((iso-paths.centos-8))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 - name: build-centos-stream-8
@@ -191,7 +191,7 @@ jobs:
     vars:
       wf: "enterprise_linux/centos_stream_8.wf.json"
       gcs_url: ((.:gcs-url))
-      iso: ((linux-image-build.iso-paths.centos-stream-8))
+      iso: ((iso-paths.centos-stream-8))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 # rhel
@@ -221,7 +221,7 @@ jobs:
     vars:
       wf: "enterprise_linux/rhel_7.wf.json"
       gcs_url: ((.:gcs-url))
-      iso: ((linux-image-build.iso-paths.rhel-7))
+      iso: ((iso-paths.rhel-7))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 - name: build-rhel-8
@@ -250,7 +250,7 @@ jobs:
     vars:
       wf: "enterprise_linux/rhel_8.wf.json"
       gcs_url: ((.:gcs-url))
-      iso: ((linux-image-build.iso-paths.rhel-8))
+      iso: ((iso-paths.rhel-8))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 - name: build-rhel-7-4-sap
@@ -279,7 +279,7 @@ jobs:
     vars:
       wf: "enterprise_linux/rhel_7_4_sap.wf.json"
       gcs_url: ((.:gcs-url))
-      iso: ((linux-image-build.iso-paths.rhel-7-4))
+      iso: ((iso-paths.rhel-7-4))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 - name: build-rhel-7-6-sap
@@ -308,7 +308,7 @@ jobs:
     vars:
       wf: "enterprise_linux/rhel_7_6_sap.wf.json"
       gcs_url: ((.:gcs-url))
-      iso: ((linux-image-build.iso-paths.rhel-7-6))
+      iso: ((iso-paths.rhel-7-6))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 - name: build-rhel-7-7-sap
@@ -337,7 +337,7 @@ jobs:
     vars:
       wf: "enterprise_linux/rhel_7_7_sap.wf.json"
       gcs_url: ((.:gcs-url))
-      iso: ((linux-image-build.iso-paths.rhel-7-7))
+      iso: ((iso-paths.rhel-7-7))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 - name: build-rhel-8-1-sap
@@ -366,7 +366,7 @@ jobs:
     vars:
       wf: "enterprise_linux/rhel_8_1_sap.wf.json"
       gcs_url: ((.:gcs-url))
-      iso: ((linux-image-build.iso-paths.rhel-8-1))
+      iso: ((iso-paths.rhel-8-1))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 - name: build-rhel-8-2-sap
@@ -395,7 +395,7 @@ jobs:
     vars:
       wf: "enterprise_linux/rhel_8_2_sap.wf.json"
       gcs_url: ((.:gcs-url))
-      iso: ((linux-image-build.iso-paths.rhel-8-2))
+      iso: ((iso-paths.rhel-8-2))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
 # debian
