--- a/concourse/pipelines/guest-package-build.yaml
+++ b/concourse/pipelines/guest-package-build.yaml
@@ -28,8 +28,8 @@ resources:
 - name: guest-test-infra
   type: git
   source:
-    uri: https://github.com/gaohannk/guest-test-infra.git
-    branch: cicd-test
+    uri: https://github.com/GoogleCloudPlatform/guest-test-infra.git
+    branch: master
 
 jobs:
 - name: guest-agent-integration-test
@@ -46,6 +46,10 @@ jobs:
     file: guest-test-infra/concourse/tasks/package-gointegtest.yaml
     vars:
       repo-name: "guest-agent"
+      timestamp: ((.:timestamp))
+  - task: validate-integtest-result
+    file: guest-test-infra/concourse/tasks/validate-integtest-result.yaml
+    vars:
       timestamp: ((.:timestamp))
 
 - name: build-guest-agent
