--- a/concourse/pipelines/dev-image-build.yaml
+++ b/concourse/pipelines/dev-image-build.yaml
@@ -457,7 +457,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/rhel"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "bare_metal/rhel_7.publish.json"
+      wf: "linux_dev/rhel_7_metal_dev.publish.json"
       environment: "staging"
 - name: publish-to-staging-rhel-8-metal-dev
   plan:
@@ -482,5 +482,5 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/rhel"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "bare_metal/rhel_8.publish.json"
+      wf: "linux_dev/rhel_8_metal_dev.publish.json"
       environment: "staging"
