--- a/concourse/pipelines/dev-image-build.yaml
+++ b/concourse/pipelines/dev-image-build.yaml
@@ -444,7 +444,7 @@ jobs:
     params:
       skip_download: "true"
   - load_var: source-version
-    file: rhel-8-metal-dev-gcs/version
+    file: rhel-7-metal-dev-gcs/version
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
   - task: generate-version
@@ -458,6 +458,7 @@ jobs:
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
       wf: "linux_dev/rhel_7_metal_dev.publish.json"
+      environment: "dev"
 - name: publish-to-staging-rhel-8-metal-dev
   plan:
   - get: guest-test-infra
@@ -482,3 +483,4 @@ jobs:
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
       wf: "linux_dev/rhel_8_metal_dev.publish.json"
+      environment: "dev"
