--- a/concourse/pipelines/linux-image-build.yaml
+++ b/concourse/pipelines/linux-image-build.yaml
@@ -527,6 +527,30 @@ jobs:
       gcs_url: ((.:gcs-url))
       google_cloud_repo: "stable"
       build_date: ((.:build-date))
+# Image test
+# centos
+- name: image-test-centos-7
+  plan:
+  - get: guest-test-infra
+  - get: compute-image-tools
+  - get: centos-7-gcs
+    passed: [build-centos-7]
+    trigger: false
+    params:
+      skip_download: "true"
+  - load_var: source-version
+    file: centos-7-gcs/version
+  - load_var: gcs-url
+    file: centos-7-gcs/url
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: image-test-centos-7
+    file: guest-test-infra/concourse/tasks/image-test.yaml
+    vars:
+      workProject: "gcp-guest"
+      tarballPath: "tarballPath"
+      testBinaryPath: "testBinaryPath"
+
 
 # Publish to testing
 # centos
@@ -535,7 +559,7 @@ jobs:
   - get: guest-test-infra
   - get: compute-image-tools
   - get: centos-7-gcs
-    passed: [build-centos-7]
+    passed: [image-test-centos-7]
     trigger: false
     params:
       skip_download: "true"
