--- a/concourse/tasks/gcloud-inject-package.yaml
+++ b/concourse/tasks/gcloud-inject-package.yaml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: google/cloud-sdk
+    repository: google/cloud-sdk:alpine
     tag: latest
 
 inputs:
